trabajando un poco en el css

--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
             <a class="nav-link active efecto" aria-current="page" href="pages/Galeria.html">Galeria</a>
             </a>
             </li>
-             <li class="nav-item mx-3 efecto">
-            <a class="nav-link active efecto" aria-current="page" href="pages/trabaja.html">Trabaja con nosotros</a>
-          </li>
           <li class="nav-item nav-item mx-3 efecto">
             <a class="nav-link active efecto" href="pages/Contactos.html">Contacto</a>
           </li>
@@ -65,10 +62,9 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active img-fluid" data-bs-interval="6000 ">
-        <img src="./images/1.png" class="d-block w-100 carrusel" alt="Ramones">
+       <a href=".//index.html" ></a><img src="./images/1.png" class="d-block w-100 carrusel" alt="Ramones">
         <div class="carousel-caption d-none d-md-block">
-          <h1 class="text-dark">Primer banda de Punk Rock Iconica</h1>
-             <p class="text-dark">Sentido homenaje a la banda mas influyente de los ultimos 40 a;os</p>
+          
         </div>
       </div>
       
@@ -88,7 +84,7 @@
                 <p>
                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda! 
                 </p>
-                <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a></p> <!--enlace absoluto-->
+                <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
                <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda!</p>
             </div>
             </article>
