--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -12,7 +12,7 @@
 <header class=" sticky-top">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
       <div class="container ">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="../images/1.png" alt=" The Ramones"></a>
+        <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" alt=" The Ramones"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -25,9 +25,6 @@
               <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
               </a>
               </li>
-               <li class="nav-item mx-3 efecto">
-              <a class="nav-link active efecto" aria-current="page" href="trabaja.html">Trabaja con nosotros</a>
-            </li>
             <li class="nav-item nav-item mx-3 efecto">
               <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
             </li>
@@ -41,9 +38,12 @@
     </nav>
   </header>
 
-<div class=" Videosramones" > 
+
+
+<div class=" Videosramones" > </div>
+  
     <p>
-        <h3><strong> los mejores videos ramones </strong>
+        <h3><strong> Los Mejores Videos The Ramones </strong>
         </h3>
     </p>
 </div>
