--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -14,7 +14,7 @@
 <header class=" sticky-top">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
       <div class="container ">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="../images/1.png" alt=" The Ramones"></a>
+        <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" alt=" The Ramones"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,9 +27,6 @@
               <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
               </a>
               </li>
-               <li class="nav-item mx-3 efecto">
-              <a class="nav-link active efecto" aria-current="page" href="trabaja.html">Trabaja con nosotros</a>
-            </li>
             <li class="nav-item nav-item mx-3 efecto">
               <a class="nav-link active efecto" href="Contactos.html">Contactos</a>
             </li>
