--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -13,7 +13,7 @@
 <header class=" sticky-top">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
       <div class="container ">
-        <a class="navbar-brand" href="index.html"><img class="logo" src="../images/1.png" ></a>
+        <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" ></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -26,9 +26,6 @@
               <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
               </a>
               </li>
-               <li class="nav-item mx-3 efecto">
-              <a class="nav-link active efecto" aria-current="page" href="trabaja.html">Trabaja con nosotros</a>
-            </li>
             <li class="nav-item nav-item mx-3 efecto">
               <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
             </li>
@@ -43,7 +40,9 @@
   </header>
   
         <section>
-            <article> 
+            <article>
+              <div> <h1> <strong> HISTORIA</strong></h1></div>
+              <br>
                     El 2 de febrero de 1976, los Ramones empezaron a grabar su primer álbum, Ramones, con un presupuesto de 6400 dólares,15​ en contraste con los altos presupuestos que gastaban los grandes grupos de rock.2​ Dos semanas y media después, el disco ya estaba terminado, y salió a la venta el 23 de abril. El 10 de mayo compartieron escenario con la banda inglesa Dr. Feelgood. Este concierto fue presenciado por un empresario inglés que les ofreció realizar un concierto en el Roundhouse de Londres el 4 de julio junto con el grupo de San Francisco The Flamin' Groovies y los ingleses The Stranglers. El concierto resultó un éxito y allanó considerablemente el camino a las bandas inglesas de punk como Sex Pistols o The Clash.14​ De este concierto se dice que lo presenciaron los futuros líderes de estas bandas que se harían famosas poco después, un hecho falso puesto que ese mismo día The Clash se encontraba teloneando a los Sex Pistols en el Black Swan de Sheffield.16​ El concierto de los Ramones en el Roundhouse está considerado como un momento crucial en el desarrollo del punk en todo el mundo.2​
 
                     Los siguientes dos álbumes fueron publicados en 1977 bajo los nombres de Leave Home y Rocket to Russia, este último alabado por la revista Rolling Stone como "el mejor ‘rock & roll’ estadounidense del año". Ambos álbumes fueron producidos por Tony Bongiovi, primo de Jon Bon Jovi. Rocket to Russia contiene los tres únicos sencillos que consiguieron entrar en las listas de éxitos de los Estados Unidos: "Sheena Is a Punk Rocker" (número 81), "Rockaway Beach" (puesto 66) y "Do You Wanna Dance" (puesto 86).2​ El 31 de diciembre de 1977 grabaron el directo It's Alive, un álbum doble que recoge su actuación en el Rainbow Theatre de Londres, finalmente publicado en 1979 solo en Europa y Asia.2​ El título es una referencia a la película de terror del mismo nombre. Tommy, cansado de hacer giras con el grupo, abandonó la banda para ser productor,12​ y fue sustituido por Mark Bell, que accedió al puesto con el nombre de Marky Ramone. Marky había trabajado anteriormente con un grupo de rock sureño llamado Dust, que publicó dos álbumes en 1971 y 1972, y había grabado junto a Richard Hell el disco Blank Generation.12​
