--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -5,43 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Galeria Ramones</title>
 </head>
 <!-- Menu************************************************* -->
 <header class=" sticky-top">
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <div class="container ">
-        <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" alt=" The Ramones"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-          <ul class="navbar-nav ">
-            <li class="nav-item mx-3 efecto">
-              <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
+  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <div class="container ">
+      <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" ></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+        <ul class="navbar-nav ">
+          <li class="nav-item mx-3 efecto">
+            <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
+          </li>
+          <li class="nav-item mx-3 efecto">
+            <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
+            </a>
             </li>
-            <li class="nav-item mx-3 efecto">
-              <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-              </a>
-              </li>
-            <li class="nav-item nav-item mx-3 efecto">
-              <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
-            </li>
-            <li class="nav-item nav-item mx-3 efecto">
-              <a class="nav-link active efecto" href="../index.html">volver</a>
-            </li>
-            
-          </ul>
-        </div>
+          <li class="nav-item nav-item mx-3 efecto">
+            <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
+          </li>
+          <li class="nav-item nav-item mx-3 efecto">
+            <a class="nav-link active efecto" href="../index.html">volver</a>
+          </li>
+          
+        </ul>
       </div>
-    </nav>
-  </header>
+    </div>
+  </nav>
+</header>
 
 
 
 <div class=" Videosramones" > </div>
-  
+  <div class="row"></div>
     <p>
         <h3><strong> Los Mejores Videos The Ramones </strong>
         </h3>
