--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
    <!-- KEYWORDS -->
-   <meta name="keywords" content="punk rock, new york, banda historica">
+   <meta name="keywords" content="punk rock, new york bandas, banda historica, ramones">
    <!-- DESCRIPTION -->
-   <meta name="description" content="peque;o homenaje a enorme banda iconica ">
+   <meta name="description" content="homenaje a enorme banda iconica The Ramones ">
    
     <!-- RESPONSIVE -->
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +18,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <title>The Ramones</title>
+    <link rel="icon" type="image/x-icon" href="./images/3.png">
 </head>
 
 <body>
@@ -81,35 +82,47 @@
                 <article> 
                   <h3>Noticias Ramoneras</h3>
                   <div class="container"> 
-                <p>
-                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda! 
-                </p>
+                      <p>
+                 
+                      </p>
                 <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
-               <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Expedita distinctio omnis maxime minima officia cum aperiam illo magni totam provident quia, ea ratione eum nesciunt nostrum beatae impedit obcaecati assumenda!</p>
-            </div>
+                      <br>
+                      <p> Marky Ramone anunció que se estará presentando nuevamente en la Argentina el próximo 7 de octubre con un único show en el Teatro Flores de la Ciudad de Buenos Aires. Al igual que el año pasado, el legendario baterista de los Ramones regresará al país con banda renovada y todos los éxitos que forman parte de los once álbumes que grabó junto al cuarteto neoyorkino. Las entradas anticipadas ya están disponibles través de sistema Passline y en los siguiente puntos de venta: Almacén Mala Difusión (CABA), La Estaka (Quilmes) y Locuras (Morón).
+                      </p>
+                      <br>
+                      <p>
+                        En su paso por Buenos Aires en 2022, y con motivo de su visita al país en repetidas ocasiones, Marky fue declarado Huésped de Honor de la Ciudad en un evento que tuvo lugar en el Strummer Bar ubicado en Palermo. «El público de Argentina siempre fue bueno con los Ramones, la mejor reacción la tuvimos en este país, por eso continué regresando por mi cuenta», expresó el baterista ese día.
+                      </p>
+                       <p> En dicha ocasión, Marky también aprovechó el momento para recordar a sus compañeros de banda: «Fue un honor haber sido parte de Ramones: Joey, Dee Dee, Johnny y Tommy, que desafortunadamente no están más entre nosotros y que si no fuera por ellos, yo no estaría aquí», dijo.
+                        </p>
+                      <br>
+                        En una entrevista exclusiva con Indie Hoy, hablamos con Marky sobre sus años en la banda, política, la actualidad del punk y la trascendencia. “Creo que lo más importante es mantener las canciones de los Ramones vivas, son excesivamente buenas como para no tocarlas. Siento que ellos murieron demasiado temprano (…). La música es y será los Ramones«, sentenció.
+                        <br>
+                  </div>
             </article>
             </div>
         </div>
     </div>
 <article>
         <h1 class="Ramones">The Ramones</h1>
-           <p class="intro">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis quis praesentium illo
-       assumenda voluptatem ipsum qui ex laboriosam? Tempore quia exercitationem voluptates, deleniti nam delectus
-       nihil architecto veniam! Beatae, cumque.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis quis
-       praesentium illo assumenda voluptatem ipsu qui ex laboriosam? Tempore quia exercitationem voluptates,
-       deleniti nam delectus nihil architecto veniam! Beatae, cumque.Lorem, ipsum dolor sit amet consectetur
-       adipisicing elit. Nobis quis praesentium illo assumenda voluptatem ipsum qui ex laboriosam? Tempore quia
-       exercitationem voluptates, deleniti nam delectus nihil architecto veniam! Beatae, cumque.Lorem, ipsum dolor
-       sit amet consectetur adipisicing elit. Nobis quis praesentium illo assumenda voluptatem ipsum qui ex
-       laboriosam? Tempore quia exercitationem voluptates, deleniti nam delectus nihil architecto veniam! Beatae,
-       cumque.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis quis praesentium illo assumenda
-       voluptatem ipsum qui ex laboriosam? Tempore quia exercitationem voluptates, deleniti nam delectus nihil
-       architecto veniam! Beatae, cumque.
+           <p class="intro"> Es una banda de rock proveniente de Queens, New York.
+                            Fundada en el año 1974, fue una de las primeras bandas que dieron origen a un nuevo estilo de música caracterizado por su rebeldía y velocidad en la música, a este movimiento se lo llamó punk rock. 
+                            <br>
+                            El grupo fue originalmente formado por John Cummings (Johnny Ramone) en guitarra, Jeffry Hyman (Joey Ramone) en batería, Douglas Glenn Colvin (Dee Dee Ramone) en bajo y voz principal de la banda.
+                            Comenzaron a ensayar con esa formación temas rápidos y cortos, lo cual iba totalmente en contra a la oleada de rock progresivo que existía en la época de su formación.
+                            <br>
+                            Después de un tiempo hubo un cambio a nivel de integrantes en el grupo ya que Dee Dee se sentía incómodo tocando y cantando al mismo tiempo.
+                            La nueva formación fue con Johnny en guitarra, Dee Dee en bajo, Joey en voz y Thomas Erdélyi (Tommy Ramone), quien hasta ese entonces había sido el mánager de la banda, en batería.
+                            <br>
+                            El nombre de los Ramones se da después de una sugerencia de Dee Dee Ramone, gran fan de los Beatles y especialmente de Paul McCartney, debido a que su ídolo algunas veces firmaba en los hoteles con el seudónimo de Paul Ramone.
+                            <br>
+                            Su look se basaba en pantalones ajustados, el pelo con un corte similar al de los Beatles y las gastadas camperas de cuero que fueron a lo largo del tiempo su marca personal en cuanto a la estética.
            </p>
    </article>
 
    <article> 
-           <p class=" texto"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.Lorem ipsum, dolor sit amet consectetur adipisicing elit. A, corrupti ullam? Cumque, dicta officia. Enim id ipsam, ad voluptate natus error dolore accusantium sunt, nam voluptatem, necessitatibus ab nulla culpa.
+           <p class=" texto"> Tocaron por primera vez en el CBGB de Nueva York, lugar que por entonces era el sitio de reunión del movimiento punk.
+                            Su primer show fue el 16 de agosto de 1974 ante media docena de personas, donde tocaron un acelerado set de veinte temas en 17 minutos. Esta actuación no fue del todo exitosa, pero esto no significó nada para el cuarteto de Queens, quienes seguían con el mismo entusiasmo
            </p>
    </div>
 
