--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- KEYWORDS -->
+    <meta name="keywords" content="punk rock, new york bandas, banda historica, ramones">
+    <!-- DESCRIPTION -->
+    <meta name="description" content="videos de la banda ">
+
+
+
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css" />
     <title>Galeria Ramones</title>
+    <link rel="icon" type="image/x-icon" href="../images/3.png">
+
 </head>
 <!-- Menu************************************************* -->
 <header class=" sticky-top">
@@ -43,10 +53,10 @@
 <div class=" Videosramones" > </div>
   <div class="row"></div>
     <p>
-        <h3><strong> Los Mejores Videos The Ramones </strong>
-        </h3>
+        <h3><strong> Los Mejores Videos The Ramones </strong></h3>
+        
     </p>
-</div>
+  </div>
 <div> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
@@ -54,20 +64,20 @@
 <div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br> 
     <br> 
-    </div>
+</div>
 
-    <div>
+<div>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br><br>
-    </div>
-    <div> 
+    <br>
+</div>
+<div> 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <br>
     <br>
-    </div>
+</div>
 
     <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 <br>
 </html>
