--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -22,59 +22,62 @@
 <header class=" sticky-top">
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
     <div class="container ">
-      <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/1.png" ></a>
+      <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav ">
-          <li class="nav-item mx-3 efecto">
+          <li>
             <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
           </li>
-          <li class="nav-item mx-3 efecto">
+          <li>
             <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-            </a>
-            </li>
-          <li class="nav-item nav-item mx-3 efecto">
+          </li>
+          <li>
             <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
           </li>
-          <li class="nav-item nav-item mx-3 efecto">
+          <li>
+            <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
+          <li>
             <a class="nav-link active efecto" href="../index.html">volver</a>
           </li>
-          
         </ul>
       </div>
     </div>
   </nav>
 </header>
+</div> 
 
 
+<div class=" Videosramones" > 
 
-<div class=" Videosramones" > </div>
-  <div class="row"></div>
     <p>
         <h3><strong> Los Mejores Videos The Ramones </strong></h3>
         
     </p>
+  
+
+    <div class="container-fluid">
+
+    <div> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+
+    <div>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
+    </div>
+    <div> 
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <br>
+    <br>
+    </div>
   </div>
-<div> 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-</div>
-
-<div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> <br> 
-    <br> 
-</div>
-
-<div>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-</div>
-<div> 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-    <br>
-</div>
 
     <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
