--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
 <!-- Menu************************************************* -->
 <header class=" sticky-top">
   <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"> <img class="logo"  src="./images/010.png" alt="ramones"></a>
+    <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+    </div>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
               <ul class="navbar-nav ">
                 <li>
