--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -48,37 +48,32 @@
   </nav>
 </header>
 </div> 
-
-
-<div class=" Videosramones" > 
-
-    <p>
-        <h3><strong> Los Mejores Videos The Ramones </strong></h3>
-        
-    </p>
+<p>
+  <h3><strong> Los Mejores Videos The Ramones </strong></h3>
   
+</p>
 
-    <div class="container-fluid">
+  <div class="container">
 
-    <div> 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
-
-    <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
-
-    <div>
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
+      <br>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
-    <div> 
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <br>
-    <br>
+      <br>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <br>
     </div>
-  </div>
-
+      <br>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <br>
+      <br>
+    </div>
+     <br>
     <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
