--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -19,38 +19,38 @@
 <body> 
     <!-- Menu************************************************* -->
 
-<header class=" sticky-top">
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
-      <div class="container ">
-        <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+    <header class=" sticky-top">
+      <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container ">
+          <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav ">
             <li>
-              <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
+            <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
             </li>
             <li>
-              <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
+            <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
             </li>
             <li>
-              <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
+            <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
             </li>
             <li>
-              <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
-            <li>
-              <a class="nav-link active efecto" href="../index.html">volver</a>
+            <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
+            </li>
+            <a class="nav-link active efecto" href="../index.html">volver</a>
             </li>
           </ul>
+          </div>
         </div>
-      </div>
-    </nav>
-  </header>
-</div> 
-<section>
-  <article>
-    <div> <h1> <strong> HISTORIA</strong></h1></div>
+      </nav>
+    </header>
+<div> 
+  <section>
+    <article>
+      <h1> <strong> HISTORIA</strong></h1>
       
        El 2 de febrero de 1976, los Ramones empezaron a grabar su primer álbum, Ramones, con un presupuesto de 6400 dólares,15​ en contraste con los altos presupuestos que gastaban los grandes grupos de rock.2​ Dos semanas y media después, el disco ya estaba terminado, y salió a la venta el 23 de abril. El 10 de mayo compartieron escenario con la banda inglesa Dr. Feelgood. Este concierto fue presenciado por un empresario inglés que les ofreció realizar un concierto en el Roundhouse de Londres el 4 de julio junto con el grupo de San Francisco The Flamin' Groovies y los ingleses The Stranglers. El concierto resultó un éxito y allanó considerablemente el camino a las bandas inglesas de punk como Sex Pistols o The Clash.14​ De este concierto se dice que lo presenciaron los futuros líderes de estas bandas que se harían famosas poco después, un hecho falso puesto que ese mismo día The Clash se encontraba teloneando a los Sex Pistols en el Black Swan de Sheffield.16​ El concierto de los Ramones en el Roundhouse está considerado como un momento crucial en el desarrollo del punk en todo el mundo.2​
       Los siguientes dos álbumes fueron publicados en 1977 bajo los nombres de Leave Home y Rocket to Russia, este último alabado por la revista Rolling Stone como "el mejor ‘rock & roll’ estadounidense del año". Ambos álbumes fueron producidos por Tony Bongiovi, primo de Jon Bon Jovi. Rocket to Russia contiene los tres únicos sencillos que consiguieron entrar en las listas de éxitos de los Estados Unidos: "Sheena Is a Punk Rocker" (número 81), "Rockaway Beach" (puesto 66) y "Do You Wanna Dance" (puesto 86).2​ El 31 de diciembre de 1977 grabaron el directo It's Alive, un álbum doble que recoge su actuación en el Rainbow Theatre de Londres, finalmente publicado en 1979 solo en Europa y Asia.2​ El título es una referencia a la película de terror del mismo nombre. Tommy, cansado de hacer giras con el grupo, abandonó la banda para ser productor,12​ y fue sustituido por Mark Bell, que accedió al puesto con el nombre de Marky Ramone. Marky había trabajado anteriormente con un grupo de rock sureño llamado Dust, que publicó dos álbumes en 1971 y 1972, y había grabado junto a Richard Hell el disco Blank Generation.12​
@@ -63,6 +63,7 @@
       Hacia esta época comenzaron los primeros problemas serios entre los miembros de la banda, especialmente entre Joey y Johnny. Ambos músicos habían sido fuente de múltiples discusiones anteriormente, especialmente políticas (mientras Johnny era un firme conservador, Joey se consideraba como una persona de izquierdas),6​ y continuaron en la tortuosa grabación de End of the Century: por un lado, Johnny intentaba que el grupo siguiese la senda de los primeros discos del grupo, mientras que por otro, Joey quería explorar otros caminos musicales más allá del punk.6​ Su relación llegó al límite cuando Johnny le "robó" a Joey su novia, llamada Linda Danielle, para acabar casándose con ella.19​ Ante esto, Joey compuso la canción "The KKK Took My Baby Away" (incluida en Pleasant Dreams) en referencia a este suceso ("KKK" son las siglas del Ku Klux Klan, lo que pone de manifiesto las tendencias conservadoras de Johnny). En una entrevista a Johnny Ramone poco antes de morir, este dijo: «Nos llevábamos mal de cualquier modo. La situación no ayudó, pero tampoco nos poníamos de acuerdo en nada. No sé. Simplemente, éramos diferentes». Luego de su separación, los miembros se reunieron en 1999 en una tienda de Virgin en Nueva York para regalar autógrafos. En 2001 murió Joey por un linfoma y al año siguiente murió Dee Dee por sobredosis de heroína. Ese mismo año, fueron incluidos en el Salón de la Fama del Rock and Roll.
   </article>
 </section>
+</div>
         
 <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
