--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -18,38 +18,38 @@
 </head>
 <body> 
     <!-- Menu************************************************* -->
-    <header class=" sticky-top">
+  <header class=" sticky-top">
       <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container ">
           <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-            <ul class="navbar-nav ">
-              <li>
-                <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
-              </li>
-              <li>
-                <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-              </li>
-              <li>
-                <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
-              </li>
-              <li>
-                <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
-              <li>
-                <a class="nav-link active efecto" href="../index.html">volver</a>
-              </li>
-            </ul>
+            </button>
+         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+          <ul class="navbar-nav ">
+            <li>
+            <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
+            </li>
+            <li>
+            <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
+            </li>
+            <li>
+            <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
+            </li>
+            <li>
+            <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
+            </li>
+            <a class="nav-link active efecto" href="../index.html">volver</a>
+            </li>
+          </ul>
           </div>
         </div>
       </nav>
     </header>
-  </div> 
-  <section>
+<section>
     <article>
-      <div> <h1> <strong> Sitios Amigos</strong></h1></div>
+      <div> <h1> <strong> Sitios Amigos</strong></h1>
+      </div>
         <br>
         <br>
     <div>
@@ -64,10 +64,9 @@
         <li class="list-group-item">  <a href="https://badreligion.com/"> <strong > Bad Religion </strong></a>
         <li class="list-group-item">  <a href="https://www.iggyandthestoogesmusic.com/"> <strong >Iggy Pop and The Stooges</strong></a>
         <li class="list-group-item">  <a href="https://www.nofxofficialwebsite.com/"> <strong >NOFX</strong></a>
-        
-        </ul>
+      </ul>
     </div>
-    </article>
+  </article>
 </section>
         
 <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
