--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -47,11 +47,15 @@
         </div>
       </nav>
     </header>
+<div>
+  <img src="../images/3.png" class="image img-fluid" alt="sombras">     
+</div> 
+<br>
 <div> 
   <section>
     <article>
       <h1> <strong> HISTORIA</strong></h1>
-      
+    
        El 2 de febrero de 1976, los Ramones empezaron a grabar su primer álbum, Ramones, con un presupuesto de 6400 dólares,15​ en contraste con los altos presupuestos que gastaban los grandes grupos de rock.2​ Dos semanas y media después, el disco ya estaba terminado, y salió a la venta el 23 de abril. El 10 de mayo compartieron escenario con la banda inglesa Dr. Feelgood. Este concierto fue presenciado por un empresario inglés que les ofreció realizar un concierto en el Roundhouse de Londres el 4 de julio junto con el grupo de San Francisco The Flamin' Groovies y los ingleses The Stranglers. El concierto resultó un éxito y allanó considerablemente el camino a las bandas inglesas de punk como Sex Pistols o The Clash.14​ De este concierto se dice que lo presenciaron los futuros líderes de estas bandas que se harían famosas poco después, un hecho falso puesto que ese mismo día The Clash se encontraba teloneando a los Sex Pistols en el Black Swan de Sheffield.16​ El concierto de los Ramones en el Roundhouse está considerado como un momento crucial en el desarrollo del punk en todo el mundo.2​
       Los siguientes dos álbumes fueron publicados en 1977 bajo los nombres de Leave Home y Rocket to Russia, este último alabado por la revista Rolling Stone como "el mejor ‘rock & roll’ estadounidense del año". Ambos álbumes fueron producidos por Tony Bongiovi, primo de Jon Bon Jovi. Rocket to Russia contiene los tres únicos sencillos que consiguieron entrar en las listas de éxitos de los Estados Unidos: "Sheena Is a Punk Rocker" (número 81), "Rockaway Beach" (puesto 66) y "Do You Wanna Dance" (puesto 86).2​ El 31 de diciembre de 1977 grabaron el directo It's Alive, un álbum doble que recoge su actuación en el Rainbow Theatre de Londres, finalmente publicado en 1979 solo en Europa y Asia.2​ El título es una referencia a la película de terror del mismo nombre. Tommy, cansado de hacer giras con el grupo, abandonó la banda para ser productor,12​ y fue sustituido por Mark Bell, que accedió al puesto con el nombre de Marky Ramone. Marky había trabajado anteriormente con un grupo de rock sureño llamado Dust, que publicó dos álbumes en 1971 y 1972, y había grabado junto a Richard Hell el disco Blank Generation.12​
       En 1978 la banda publicó el primer álbum con su nuevo miembro, Road to Ruin. Este álbum incluye por primera vez en la discografía de los Ramones canciones con guitarras acústicas, varias baladas, el primer solo de guitarra de Johnny y las dos primeras canciones de más de tres minutos, aunque los resultados de ventas siguieron siendo desfavorables. No obstante, la canción "I Wanna Be Sedated" se convirtió en una de las más famosas del cuarteto neoyorquino.17​
