trabajando sobre segunda correcion (mayor contenido y mejorando etiquetas semanticas)y tambien ya elimine css de mas (tercera correccion)

--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -69,7 +69,11 @@
   </article>
 </section>
         
-<footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
+<footer> <p> <strong>Copyright 2023 - Mar Del Plarta  Argentina.</strong></p>
+
+
+</footer>
+ <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </body>
