--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
 </div>
 <!-- *********************************************** -->
 
-<footer> Copyright 2023 - Mar Del Plarta Argentina. </footer>
+<footer> <p> <strong>Copyright 2023 - Mar Del Plarta  Argentina.</strong></p>
+
+
+</footer>
+
    <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
