--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -56,25 +56,55 @@
   <div class="container">
 
     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/h92vSe-bnlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/h92vSe-bnlY" title="I want you around" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
       <br>
     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="Pet Sematary" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
       <br>
     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/0_iASxvKiOs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/0_iASxvKiOs" title="I Just want something to do " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <br>
     </div>
       <br>
     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/0ADxz4UT90s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/0ADxz4UT90s" title="R.A.M.O.N.E.S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <br>
       <br>
     </div>
      <br>
-    <footer> Copyright 2023 - Mar Del Plarta  Argentina. </footer>
+     <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/g7KrBgnjaLY" title="She's the one " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+      <br>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/8tTHAdyWLMc" title="Needls and Pins" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+      <br>
+    <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/lu_lQpnHDhQ" title="Do you wanna Dance?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+     </div>
+      <br>
+     <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/yV7VtiEja5Q" title="Spiderman" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+      <br>
+     <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/XKkiLEb9Hms" title="Believe in miracles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+      <br>
+     <div class=" ratio ratio-16x9">
+      <iframe src="https://www.youtube.com/embed/8IoO5nkxT_4" title="What a wonderfull world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+     </div>
+     <br>
+
+
+<footer> <p> <strong>Copyright 2023 - Mar Del Plarta  Argentina.</strong></p>
+
+
+</footer>
+ <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 <br>
