seguimos agregando contenido

--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -159,6 +159,27 @@
         Como productor de grupos, trabajó también con artistas como "The Replacements", "Redd Kross"," The Rattlers" y "The Talking Heads".
         Actualmente se encuentra trabajando en un nuevo proyecto junto a Claudia Tienan, tocando en una banda de bluegrass (country) llamada "Uncle Monk".
       </p>
+    </article>
+  </section>
+</div>
+<h2> <p> MARKY RAMONE </p> </h2>
+<div class="texto">
+  <section>
+    <article>
+      <p>
+        Marc Steven Bell (Brooklyn, Nueva York, 15 de julio de 1952), más conocido como Marky Ramone
+        Marky reemplazó a Tommy Ramone en la batería de Ramones después de que este se retirara en 1978. Su primera participación fue en el disco Road to Ruin de ese mismo año y tocó en vivo por primera vez el 29 de junio.
+	      Anteriormente a Ramones, había sido baterista de las bandas de punk rock Wayne County And The Backstreet Boys junto a su líder Jayne County y de The Voidoids con su líder Richard Hell, todo esto entre 1974 y 1977, con este última banda grabó algunos discos. Su último concierto con The Ramones fue el 27 de noviembre de 1982, tras lo cual se retiró de la banda por tener problemas con el alcohol. Estos problemas le llevaron a faltar a un concierto el 10 de octubre de 1981, el único que se suspendió en toda la historia de la banda. Fue reemplazado por Richie Ramone. Sin embargo, el 4 de septiembre de 1987 regresó a la banda donde permaneció hasta la disolución del grupo en 1996. Su último concierto de la gira mundial fue en Argentina, aunque se recuerda una última participación en el festival Lollapaloza a finales de ese año.
+	      En 2006 se celebró el 30 aniversario de la grabación del primer álbum y Marky se encargó de realizar una gira mundial, en la que se recuerdan viejos temas como: Blitzkrieg Bop, Judy Is A Punk, Beat On The Brat, entre otras.
+	      En 2006 junto con Tequila Baby realizan un concierto rememorando canciones de The Ramones (Marky Ramone & Tequila Baby Ao Vivo) y con el artista invitado Sebastián del grupo argentino Expulsados que canta uno de sus más exitosos singles (Poison Heart)
+        Desde entonces ha tocado en las bandas Speed Kings, The Misfits y The Intruders entre otras.
+        Su primera banda fue "Dust", pero como eran muy jóvenes no podían tocar en ningún lado. De todas formas grabaron dos discos, en los cuales Marky era muy técnico en la batería
+        Actualmente tiene una banda llamada Marky Ramone's Blitzkrieg, en sus inicios estuvo el excantante de The Misfits, Michale Graves. Desde 2016, el cantante es Ken Stringfellow, conocido por haber formado parte de The Posies, R.E.M. y Big Star, cuya discografía abarca más de 200 álbumes.
+        En la actualidad sigue dando conciertos por diferentes países del mundo.
+      </p>
+    </article>
+  </section>
+</div>
 
 
 
