--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -46,29 +46,24 @@
         </div>
       </nav>
     </header>
-<section>
-    <article>
-      <div> <h1> <strong> Sitios Amigos</strong></h1>
-      </div>
-        <br>
-        <br>
-    <div>
-      <ul class="list-group">
-        <li class="list-group-item"> <a href="https://es.wikipedia.org/wiki/Ramones"> <strong >Wikipedia Ramonera </strong></a>
-        <li class="list-group-item"> <a href=" https://rancidrancid.com/"> <strong >Rancid</strong></a>
-        <li class="list-group-item"> <a href="https://markyramone.com/"> <strong >Marky Ramone</strong></a>
-        <li class="list-group-item"> <a href="https://www.dietotenhosen.de/es/revista/cj-ramone"> <strong >Die Toten Hosen</strong></a>
-        <li class="list-group-item">  <a href="https://www.theclash.com/"> <strong > The Clash</strong></a>
-        <li class="list-group-item">  <a href="https://www.blondie.net/"> <strong > Blondie</strong></a>
-        <li class="list-group-item">  <a href="https://www.misfits.com/"> <strong > The Misfits</strong></a>
-        <li class="list-group-item">  <a href="https://badreligion.com/"> <strong > Bad Religion </strong></a>
-        <li class="list-group-item">  <a href="https://www.iggyandthestoogesmusic.com/"> <strong >Iggy Pop and The Stooges</strong></a>
-        <li class="list-group-item">  <a href="https://www.nofxofficialwebsite.com/"> <strong >NOFX</strong></a>
-      </ul>
-    </div>
-  </article>
-</section>
- <br>
+<h1> <strong> Sitios Amigos</strong></h1>
+  <br>
+  <br>
+  <div>
+    <ul class="list-group">
+      <li class="list-group-item"> <a href="https://es.wikipedia.org/wiki/Ramones"> <strong >Wikipedia Ramonera </strong></a>
+      <li class="list-group-item"> <a href=" https://rancidrancid.com/"> <strong >Rancid</strong></a>
+      <li class="list-group-item"> <a href="https://markyramone.com/"> <strong >Marky Ramone</strong></a>
+      <li class="list-group-item"> <a href="https://www.dietotenhosen.de/es/revista/cj-ramone"> <strong >Die Toten Hosen</strong></a>
+      <li class="list-group-item">  <a href="https://www.theclash.com/"> <strong > The Clash</strong></a>
+      <li class="list-group-item">  <a href="https://www.blondie.net/"> <strong > Blondie</strong></a>
+      <li class="list-group-item">  <a href="https://www.misfits.com/"> <strong > The Misfits</strong></a>
+      <li class="list-group-item">  <a href="https://badreligion.com/"> <strong > Bad Religion </strong></a>
+      <li class="list-group-item">  <a href="https://www.iggyandthestoogesmusic.com/"> <strong >Iggy Pop and The Stooges</strong></a>
+      <li class="list-group-item">  <a href="https://www.nofxofficialwebsite.com/"> <strong >NOFX</strong></a>
+    </ul>
+  </div>
+  <br>
 
  
 
