aplicando cambios en el navbar como una de las correcciones

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 <!-- Menu************************************************* -->
 <header class=" sticky-top">
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+  <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
     <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -80,8 +80,8 @@
     <article> 
     <h2>Noticias Ramoneras</h2>
     <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
-  <div class= "noticias">               
-    <p> Marky Ramone anunció que se estará presentando nuevamente en la Argentina el próximo 7 de octubre con un único show en el Teatro Flores de la Ciudad de Buenos Aires. Al igual que el año pasado, el legendario baterista de los Ramones regresará al país con banda renovada y todos los éxitos que forman parte de los once álbumes que grabó junto al cuarteto neoyorkino. Las entradas anticipadas ya están disponibles través de sistema Passline y en los siguiente puntos de venta: Almacén Mala Difusión (CABA), La Estaka (Quilmes) y Locuras (Morón).
+          <div class= "noticias">               
+          <p> Marky Ramone anunció que se estará presentando nuevamente en la Argentina el próximo 7 de octubre con un único show en el Teatro Flores de la Ciudad de Buenos Aires. Al igual que el año pasado, el legendario baterista de los Ramones regresará al país con banda renovada y todos los éxitos que forman parte de los once álbumes que grabó junto al cuarteto neoyorkino. Las entradas anticipadas ya están disponibles través de sistema Passline y en los siguiente puntos de venta: Almacén Mala Difusión (CABA), La Estaka (Quilmes) y Locuras (Morón).
           </p>
           <p>
               En su paso por Buenos Aires en 2022, y con motivo de su visita al país en repetidas ocasiones, Marky fue declarado Huésped de Honor de la Ciudad en un evento que tuvo lugar en el Strummer Bar ubicado en Palermo. «El público de Argentina siempre fue bueno con los Ramones, la mejor reacción la tuvimos en este país, por eso continué regresando por mi cuenta», expresó el baterista ese día.
