--- a/pages/Contactos.html
+++ b/pages/Contactos.html
@@ -21,7 +21,7 @@
 <body> 
               <!-- Menu************************************************* -->
 <header class=" sticky-top">
-  <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+  <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
   <div class="container ">
       <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
