realizando mas correcciones y agregando contenido.

--- a/index.html
+++ b/index.html
@@ -106,10 +106,32 @@
 </div>
 <!-- *********************************************** -->
 
-<footer> <p> <strong>Copyright 2023 - Mar Del Plarta  Argentina.</strong></p>
-
-
+<footer class="footer-07">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-12 text-center">
+        <h2 class="footer-heading"><a href="../images/010.png" class="logo">THE RAMONES</a></h2>
+        <p class="menu">
+          <a href="../index.html">Home</a>
+          <a href="./Contactos.html">Contactos</a>
+          <a href="./Galeria.html">Galeria</a>
+          <a href="./Historia.html">Historia</a>
+          <a href="./sitios_amigos.html">Sitios amigos</a>
+        </p>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-12 text-center">
+        <p class="copyright">
+        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+       </p>
+      </div>
+    </div>
+  </div>
 </footer>
+
+
+
 
    <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
