--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -99,11 +99,30 @@
      </div>
      <br>
 
+     <footer class="footer-07">
+			<div class="container">
+				<div class="row justify-content-center">
+					<div class="col-md-12 text-center">
+						<h2 class="footer-heading"><a href="../images/010.png" class="logo">THE RAMONES</a></h2>
+						<p class="menu">
+							<a href="../index.html">Home</a>
+							<a href="./Contactos.html">Contactos</a>
+							<a href="./Galeria.html">Galeria</a>
+							<a href="./Historia.html">Historia</a>
+							<a href="./sitios_amigos.html">Sitios amigos</a>
+			      </p>
+			    </div>
+				</div>
+				<div class="row mt-5">
+					<div class="col-md-12 text-center">
+						<p class="copyright">
+					  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
+					 </p>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-<footer> <p> <strong>Copyright 2023 - Mar Del Plarta  Argentina.</strong></p>
-
-
-</footer>
  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
