seguimos con las correciones en este caso agregamos contenido al footer

--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -68,7 +68,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 text-center">
-          <h2 class="footer-heading"><a href="../images/010.png" class="logo">THE RAMONES</a></h2>
+          <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
           <p class="menu">
             <a href="../index.html">Home</a>
             <a href="./Contactos.html">Contactos</a>
