--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
   </div>
 </div>
 <!-- *********************************************** -->
-
 <footer class="footer-07">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-12 text-center">
-        <h2 class="footer-heading"><a href="../images/010.png" class="logo">THE RAMONES</a></h2>
+        <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
         <p class="menu">
           <a href="../index.html">Home</a>
           <a href="./Contactos.html">Contactos</a>
