haciendo correciones de la semantica

--- a/index.html
+++ b/index.html
@@ -23,34 +23,25 @@
   <body>
     <!-- Menu************************************************* -->
     <header class=" sticky-top">
-  <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
-    <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/010.png" alt="ramones"></a>
+      <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
+      <a class="navbar-brand" href="index.html"> <img class="logo" src="./images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
       <ul class="navbar-nav ">
-        <li>
-          <a class="nav-link active efecto" aria-current="page" href="./pages/Historia.html">Historia</a>
-        </li>
-        <li>
-          <a class="nav-link active efecto" aria-current="page" href="./pages/Galeria.html">Galeria</a>
-        </li>
-        <li>
-          <a class="nav-link active efecto" href="./pages/Contactos.html">Contacto</a>
-        </li>
-        <li>
-          <a class="nav-link active efecto" href="./pages/sitios_amigos.html">Sitios Amigos</a>
-        <li>
-          <a class="nav-link active efecto" href="./index.html">volver</a>
-        </li>
+        <li><a class="nav-link active efecto" aria-current="page" href="./pages/Historia.html">Historia</a></li>
+        <li><a class="nav-link active efecto" aria-current="page" href="./pages/Galeria.html">Galeria</a></li>
+        <li><a class="nav-link active efecto" href="./pages/Contactos.html">Contacto</a></li>
+        <li><a class="nav-link active efecto" href="./pages/sitios_amigos.html">Sitios Amigos</a></li>
+        <li><a class="nav-link active efecto" href="./index.html">volver</a></li>
       </ul>
     </div>
-  </nav>
+      </nav>
 </header>
 
 <!-- ************************************************ -->
-  <div class="Ramones"> <h1><strong>The Ramones</strong></h1> </div>
+  <div class="Ramones"> <h1><strong>The Ramones</strong></h1></div>
     <article>
       <p class="intro"> 
      
@@ -77,8 +68,8 @@
   <div class="row">
   <div class=" col">
     <article> 
-    <h2>Noticias Ramoneras</h2>
-    <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
+      <h2>Noticias Ramoneras</h2>
+        <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
           <div class= "noticias">               
           <p> Marky Ramone anunció que se estará presentando nuevamente en la Argentina el próximo 7 de octubre con un único show en el Teatro Flores de la Ciudad de Buenos Aires. Al igual que el año pasado, el legendario baterista de los Ramones regresará al país con banda renovada y todos los éxitos que forman parte de los once álbumes que grabó junto al cuarteto neoyorkino. Las entradas anticipadas ya están disponibles través de sistema Passline y en los siguiente puntos de venta: Almacén Mala Difusión (CABA), La Estaka (Quilmes) y Locuras (Morón).
           </p>
@@ -88,22 +79,22 @@
           <p> En dicha ocasión, Marky también aprovechó el momento para recordar a sus compañeros de banda: «Fue un honor haber sido parte de Ramones: Joey, Dee Dee, Johnny y Tommy, que desafortunadamente no están más entre nosotros y que si no fuera por ellos, yo no estaría aquí», dijo.
             En una entrevista exclusiva con Indie Hoy, hablamos con Marky sobre sus años en la banda, política, la actualidad del punk y la trascendencia. “Creo que lo más importante es mantener las canciones de los Ramones vivas, son excesivamente buenas como para no tocarlas. Siento que ellos murieron demasiado temprano (…). La música es y será los Ramones«, sentenció.
           </p>   
-        </div>           
-          </article>
-        </div>
-        </div>
-      </div>
+          </div>           
+    </article>
+  </div>
+  </div>
+</div>
 
 
 <div class="carousel-inner">
-  <div class="carousel-item active img-fluid" data-bs-interval="6000 " ></div>
+  <div class="carousel-item active img-fluid" data-bs-interval="6000 " >
     <a href=".//index.html" ></a><img src="./images/8.jpg" class="image img-fluid" alt="Ramones">
-  <div class="carousel-caption d-none d-md-block">
+    <div class="carousel-caption d-none d-md-block">
         
-  </div>
     </div>
   </div>
 </div>
+
 <!-- *********************************************** -->
 <footer class="footer-07">
   <div class="container">
