--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -18,30 +18,21 @@
 <!-- Menu************************************************* -->
 <header class=" sticky-top">
   <nav class="navbar navbar-dark bg-secondary navbar-expand-lg">
-    <div class="container ">
+  <div class="container ">
       <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-      <ul class="navbar-nav ">
-      <li>
-      <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
-      </li>
-      <li>
-      <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-      </li>
-      <li>
-      <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
-      </li>
-      <li>
-      <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
-      </li>
-      <a class="nav-link active efecto" href="../index.html">volver</a>
-      </li>
-      </ul>
-    </div>
-    </div>
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+    <ul class="navbar-nav ">
+      <li><a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a></li>
+      <li><a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a></li>
+      <li><a class="nav-link active efecto" href="Contactos.html">Contacto</a></li>
+      <li><a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a></li> 
+      <li><a class="nav-link active efecto" href="../index.html">volver</a></li>
+    </ul>
+  </div>
+  </div>
   </nav>
 </header>
 <div>
