--- a/pages/Galeria.html
+++ b/pages/Galeria.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- KEYWORDS -->
-    <meta name="keywords" content="punk rock, new york bandas, banda historica, ramones">
-    <!-- DESCRIPTION -->
-    <meta name="description" content="videos de la banda ">
-
-
-
-
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css" />
-    <title>Galeria Ramones</title>
-    <link rel="icon" type="image/x-icon" href="../images/3.png">
+<!-- KEYWORDS -->
+<meta name="keywords" content="punk rock, new york bandas, banda historica, ramones">
+<!-- DESCRIPTION -->
+<meta name="description" content="videos de la banda ">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link rel="stylesheet" href="../css/style.css" />
+<title>Galeria Ramones</title>
+<link rel="icon" type="image/x-icon" href="../images/3.png">
 
 </head>
 <!-- Menu************************************************* -->
@@ -26,107 +22,91 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
-     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
       <ul class="navbar-nav ">
-        <li>
-        <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
-        </li>
-        <li>
-        <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-        </li>
-        <li>
-        <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
-        </li>
-        <li>
-        <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
-        </li>
-        <a class="nav-link active efecto" href="../index.html">volver</a>
-        </li>
+        <li><a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a></li>
+        <li><a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a></li>
+        <li><a class="nav-link active efecto" href="Contactos.html">Contacto</a></li>
+        <li><a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a></li>
+        <li><a class="nav-link active efecto" href="../index.html">volver</a></li>
       </ul>
-      </div>
+    </div>
     </div>
   </nav>
 </header>
 
-<p>
-  <h3><strong> Los Mejores Videos The Ramones </strong></h3>
+<p><h3><strong> Los Mejores Videos The Ramones </strong></h3></p>
   
-</p>
-
-  <div class="container">
-
-    <div class=" ratio ratio-16x9">
+<div class="container">
+  <div class=" ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/h92vSe-bnlY" title="I want you around" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+  </div>
       <br>
-    <div class=" ratio ratio-16x9">
+  <div class=" ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/HJWFsZ_YUc4" title="Pet Sematary" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+  </div>
       <br>
-    <div class=" ratio ratio-16x9">
+  <div class=" ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/0_iASxvKiOs" title="I Just want something to do " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <br>
-    </div>
+  </div>
       <br>
-    <div class=" ratio ratio-16x9">
+  <div class=" ratio ratio-16x9">
       <iframe src="https://www.youtube.com/embed/0ADxz4UT90s" title="R.A.M.O.N.E.S" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
       <br>
       <br>
-    </div>
+  </div>
      <br>
-     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/g7KrBgnjaLY" title="She's the one " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/g7KrBgnjaLY" title="She's the one " frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
       <br>
-    <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/8tTHAdyWLMc" title="Needls and Pins" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/8tTHAdyWLMc" title="Needls and Pins" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
       <br>
-    <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/lu_lQpnHDhQ" title="Do you wanna Dance?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
-     </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/lu_lQpnHDhQ" title="Do you wanna Dance?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+  </div>
       <br>
-     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/yV7VtiEja5Q" title="Spiderman" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/yV7VtiEja5Q" title="Spiderman" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
       <br>
-     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/XKkiLEb9Hms" title="Believe in miracles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/XKkiLEb9Hms" title="Believe in miracles" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
       <br>
-     <div class=" ratio ratio-16x9">
-      <iframe src="https://www.youtube.com/embed/8IoO5nkxT_4" title="What a wonderfull world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-     </div>
+  <div class=" ratio ratio-16x9">
+    <iframe src="https://www.youtube.com/embed/8IoO5nkxT_4" title="What a wonderfull world" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  </div>
      <br>
 
-     <footer class="footer-07">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-md-12 text-center">
-            <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
-            <p class="menu">
-              <a href="../index.html">Home</a>
-              <a href="./Contactos.html">Contactos</a>
-              <a href="./Galeria.html">Galeria</a>
-              <a href="./Historia.html">Historia</a>
-              <a href="./sitios_amigos.html">Sitios amigos</a>
-            </p>
-          </div>
-        </div>
-        <div class="row mt-5">
-          <div class="col-md-12 text-center">
-            <p class="copyright">
-            Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved |
-           </p>
-          </div>
-        </div>
-      </div>
-    </footer>
+<footer class="footer-07">
+  <div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-12 text-center">
+      <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
+        <p class="menu">
+        <a href="../index.html">Home</a>
+        <a href="./Contactos.html">Contactos</a>
+        <a href="./Galeria.html">Galeria</a>
+        <a href="./Historia.html">Historia</a>
+        <a href="./sitios_amigos.html">Sitios amigos</a>
+        </p>
+    </div>
+   </div>
+    <div class="row mt-5">
+    <div class="col-md-12 text-center">
+            <p class="copyright"> Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved </p>
+    </div>
+    </div>
+  </div>
+</footer>
 
  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
-<br>
 </html>
 
 
