--- a/pages/sitios_amigos.html
+++ b/pages/sitios_amigos.html
@@ -23,44 +23,35 @@
         <div class="container ">
           <a class="navbar-brand" href="../index.html"><img class="logo" src="../images/010.png" alt="ramones"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
             </button>
-         <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
           <ul class="navbar-nav ">
-            <li>
-            <a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a>
-            </li>
-            <li>
-            <a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a>
-            </li>
-            <li>
-            <a class="nav-link active efecto" href="Contactos.html">Contacto</a>
-            </li>
-            <li>
-            <a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a>
-            </li>
-            <a class="nav-link active efecto" href="../index.html">volver</a>
-            </li>
+            <li><a class="nav-link active efecto" aria-current="page" href="Historia.html">Historia</a></li>
+            <li><a class="nav-link active efecto" aria-current="page" href="Galeria.html">Galeria</a></li>
+            <li><a class="nav-link active efecto" href="Contactos.html">Contacto</a></li>
+            <li><a class="nav-link active efecto" href="sitios_amigos.html">Sitios Amigos</a></li>
+            <li><a class="nav-link active efecto" href="../index.html">volver</a></li>
           </ul>
-          </div>
+        </div>
         </div>
       </nav>
     </header>
-<h1> <strong> Sitios Amigos</strong></h1>
+  <p><h1> <strong> Sitios Amigos</strong></h1></p>
   <br>
   <br>
   <div>
     <ul class="list-group">
-      <li class="list-group-item"> <a href="https://es.wikipedia.org/wiki/Ramones"> <strong >Wikipedia Ramonera </strong></a>
-      <li class="list-group-item"> <a href=" https://rancidrancid.com/"> <strong >Rancid</strong></a>
-      <li class="list-group-item"> <a href="https://markyramone.com/"> <strong >Marky Ramone</strong></a>
-      <li class="list-group-item"> <a href="https://www.dietotenhosen.de/es/revista/cj-ramone"> <strong >Die Toten Hosen</strong></a>
-      <li class="list-group-item">  <a href="https://www.theclash.com/"> <strong > The Clash</strong></a>
-      <li class="list-group-item">  <a href="https://www.blondie.net/"> <strong > Blondie</strong></a>
-      <li class="list-group-item">  <a href="https://www.misfits.com/"> <strong > The Misfits</strong></a>
-      <li class="list-group-item">  <a href="https://badreligion.com/"> <strong > Bad Religion </strong></a>
-      <li class="list-group-item">  <a href="https://www.iggyandthestoogesmusic.com/"> <strong >Iggy Pop and The Stooges</strong></a>
-      <li class="list-group-item">  <a href="https://www.nofxofficialwebsite.com/"> <strong >NOFX</strong></a>
+      <li class="list-group-item"><a href="https://es.wikipedia.org/wiki/Ramones"> <strong >Wikipedia Ramonera </strong></a>
+      <li class="list-group-item"><a href=" https://rancidrancid.com/"> <strong >Rancid</strong></a>
+      <li class="list-group-item"><a href="https://markyramone.com/"> <strong >Marky Ramone</strong></a>
+      <li class="list-group-item"><a href="https://www.dietotenhosen.de/es/revista/cj-ramone"> <strong >Die Toten Hosen</strong></a>
+      <li class="list-group-item"><a href="https://www.theclash.com/"> <strong > The Clash</strong></a>
+      <li class="list-group-item"><a href="https://www.blondie.net/"> <strong > Blondie</strong></a>
+      <li class="list-group-item"><a href="https://www.misfits.com/"> <strong > The Misfits</strong></a>
+      <li class="list-group-item"><a href="https://badreligion.com/"> <strong > Bad Religion </strong></a>
+      <li class="list-group-item"><a href="https://www.iggyandthestoogesmusic.com/"> <strong >Iggy Pop and The Stooges</strong></a>
+      <li class="list-group-item"><a href="https://www.nofxofficialwebsite.com/"> <strong >NOFX</strong></a>
     </ul>
   </div>
   <br>
