modificando la redireccion del footer y sus enlaces

--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
       <div class="col-md-12 text-center">
         <h5 class="footer-heading"> <p>THE RAMONES</h5></p>
         <p class="menu">
-          <a href="../index.html">Home</a>
-          <a href="./Contactos.html">Contactos</a>
-          <a href="./Galeria.html">Galeria</a>
-          <a href="./Historia.html">Historia</a>
-          <a href="./sitios_amigos.html">Sitios amigos</a>
+          <a href="index.html">Home</a>
+          <a href="./pages/Contactos.html">Contactos</a>
+          <a href="./pages/Galeria.html">Galeria</a>
+          <a href="./pages/Historia.html">Historia</a>
+          <a href="./pages/sitios_amigos.html">Sitios amigos</a>
         </p>
       </div>
     </div>
