rompiendo y armando de vuelta el codigo.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class ="titulo"><p><h1><strong>The Ramones</strong></h1></p></div>
+    
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
       <ul class="navbar-nav ">
         <li><a class="nav-link active efecto" aria-current="page" href="./pages/Historia.html">Historia</a></li>
@@ -40,9 +40,7 @@
     </div>
       </nav>
 </header>
-
- <main class=" content">
-
+  
 <div class="Ramones"> 
   <p><h2><strong>The Ramones</strong></h2></p>
   <article> 
@@ -69,10 +67,9 @@
       </p>
     </article>
 </div>
+  </div>
 
-
-
-    <article> 
+<article class="noticias ramoneras">
       <h3>Noticias Ramoneras</h3>
         <a href="https://es.wikipedia.org/wiki/Ramones"> Wikipedia Ramonera </a> <!--enlace absoluto-->
           <div class= "noticias">               
