--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -55,9 +55,12 @@
   </section>
 </div>
 </div>
-<div class="miembros"> <h2> <strong> MIEMBROS DE LA BANDA </strong></h2></div>
+<div class="container">
+  <div class="row align-items-center">
+    <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 d-flex align-items-center flex-wrap d-grid gap-4">
+    <div class="miembros"> <h2> <strong> MIEMBROS DE LA BANDA </strong></h2></div>
   <h2> <p> JOEY RAMONE </p> </h2>
-<div class="texto">
+<div class="texto1">
   <section>
     <article>
       <p>
@@ -77,9 +80,9 @@
     </article>
   </section>
 </div>
+<div class="texto2">
 <h2> <p> JOHNNY RAMONE </p> </h2>
-<div class="texto">
-  <section>
+<section>
     <article>
       <p>
         Johnny Ramone nació el 8 de Octubre del año 1948 en Long Island.
@@ -104,8 +107,8 @@
     </article>
   </section>
 </div>
+<div class="texto3"></div>
 <h2> <p> DEE DEE RAMONE </p> </h2>
-<div class="texto">
   <section>
     <article>
       <p>
@@ -125,9 +128,9 @@
     </article>
   </section>
 </div>
+<div class="texto4">
 <h2> <p> TOMMY RAMONE </p> </h2>
-<div class="texto">
-  <section>
+<section>
     <article>
       <p> 
         Tommy Ramone nació el 29 de Enero de 1952 en Budapest, Hungría, pero se crió en Nueva York.
@@ -151,8 +154,8 @@
     </article>
   </section>
 </div>
+<div class="texto5">
 <h2> <p> MARKY RAMONE </p> </h2>
-<div class="texto">
   <section>
     <article>
       <p>
@@ -169,6 +172,9 @@
     </article>
   </section>
 </div>
+    </div>
+  </div>
+  
 <footer class="footer-07">
   <div class="container">
     <div class="row justify-content-center">
